# clicknback

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  README.md
.claude/agents/: code-agent.md  docs-agent.md  review-agent.md
.claude/rules/: ADR-STRUCTURE.md  API-CONTRACT-STRUCTURE.md  ARCHITECTURE.md  AUTONOMOUS-EXECUTION.md  AVOID-UNUSED-CODE.md  CODE-ORGANIZATION.md  CONVENTIONS.md  DOCS-ORGANIZATION.md  FINANCIAL-CORRECTNESS.md  FUNCTIONAL-SPEC-STRUCTURE.md  MARKDOWN-STANDARDS.md  PROJECT.md  QUALITY-GATES.md
.github/: copilot-instructions.md
.github/prompts/: add-migration.prompt.md  build-feature.prompt.md  build-functionality.prompt.md  code-review.prompt.md  create-module.prompt.md  review-code.prompt.md  setup-for-prod.prompt.md  write-adr.prompt.md  write-e2e-tests.prompt.md  write-github-issue-for-fr.prompt.md  write-github-issue.prompt.md  write-integration-tests.prompt.md  write-tests.prompt.md  write-unit-tests.prompt.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 405812758eb5_add_purchases_table.py  46afc1459aaf_add_feature_flags_table.py  8497bfcea306_add_cashback_amount_to_purchases.py  9f8a7e6d5c4b_add_refresh_tokens_table.py  a5c9d5ac614e_add_users_table.py  c1d2e3f4a5b6_add_wallets_table.py  ca7009b49525_add_cashback_transactions_table.py  de09c6256aea_add_merchants_table.py  fba8773f9846_add_offers_table.py  fe9fba7918bc_add_audit_logs_table.py
api-requests/: create-user.http
app/: main.py  models.py
app/api/: users.py
app/auth/: api.py  clients.py  composition.py  exceptions.py  models.py  policies.py  providers.py  repositories.py  schemas.py  services.py  token_provider.py
app/cashback/: calculator.py  models.py  repositories.py
app/core/: broker.py  config.py  current_user.py  database.py  exceptions.py  health.py  logging.py  scheduler.py  unit_of_work.py
app/feature_flags/: api.py  composition.py  errors.py  exceptions.py  models.py  policies.py  repositories.py  schemas.py  services.py
app/merchants/: api.py  composition.py  exceptions.py  models.py  policies.py  repository.py  schemas.py  services.py
app/offers/: api.py  composition.py  (+7 more)
http/: quickstart.http
scripts/: coverage-grade.sh
seeds/: all.sql  dev.sql  e2e.sql  users.sql
tests/: conftest.py
(+431 files in other folders)
