[project]
name = "clicknback"
version = "0.1.0"
description = "ClicknBack - A minimal, production-grade cashback backend system."
authors = [{ name = "Jero Sanchez", email = "dev@jerosanchez.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]==0.127.0",
    "psycopg2-binary==2.9.11",
    "alembic==1.17.2",
    "passlib==1.7.4",
    "bcrypt==3.2.0",
    "python-jose==3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pylint==4.0.4",
    "black==25.12.0",
    "flake8==7.3.0",
    "ruff",
    "bandit==1.8.3",
    "pre-commit==4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
