[project]
name = "clicknback"
version = "0.1.0"
description = "ClicknBack - A minimal, production-grade cashback backend system."
authors = [{ name = "Jero Sanchez", email = "dev@jerosanchez.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]==0.135.1",
    "psycopg2-binary==2.9.11",
    "asyncpg==0.30.0",
    "alembic==1.18.4",
    "passlib==1.7.4",
    "bcrypt==3.2.0",
    "python-jose==3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pylint==4.0.5",
    "black==25.12.0",
    "flake8==7.3.0",
    "ruff",
    "bandit==1.9.4",
    "pre-commit==4.5.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "strict"
